[package]
name = "arch-updates-rs"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dirs = "6.0.0"
fs2 = "0.4.3"
glib = "0.20.10"
gtk = "0.18.2"
image = { version = "0.25.6", features = ["png"], default-features = false }
log = "0.4.27"
notify = "8.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
signal-hook = "0.3.18"
simplelog = "0.12.2"
toml = "0.8.22"
tray-icon = "0.20.1"
